Update signup link in login.html

--- a/templates/login.html
+++ b/templates/login.html
@@ -79,7 +79,7 @@
       <a class="link" name="forgot" href="/fof/forgotpass">Forgot Password?</a>
       </label>
       <label>
-      <a class="link" href="reg.html" name="signup">Sign up instead</a><br><br>
+      <a class="link" href="/fof/register" name="signup">Sign up instead</a><br><br>
       </label>
       <button type="submit">Login</button>
     </form>
